--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
-<!DOCTYPE html>
+c<!DOCTYPE html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>Clock</title>
+	
 	<!-- Optional theme -->
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+	
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
+
 <body>
 
 <div class="container">
@@ -17,6 +20,9 @@
   <button id="start" type="button" class="btn btn-primary btn-lg">Start button</button>
   <button  id="clear" type="button" class="btn btn-default btn-lg">Clear button</button>
 </p>
+
 <script type="text/javascript" src = js/script_clock.js></script>
+
 </body>
+
 </html>
